--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -69,7 +69,7 @@ jobs:
 
       - name: Upload Playwright Test Report
         id: upload-results
-        uses: shallwefootball/s3-upload-action@<commit-sha>
+        uses: shallwefootball/s3-upload-action@v1.3.3
         if: always() && hashFiles('.next/__e2e__reports__') != ''
         with:
           aws_key_id: ${{ secrets.AWS_KEY_ID }}
