--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -44,4 +44,4 @@ ENV NEXT_PUBLIC_TEST_ENV=e2e
 
 # We need to build in the CMD because the build process needs the database to be ready
 # so it can generate static pages
-CMD sh -c "pnpm dev:prisma:seed && pnpm build && pnpm start"
+CMD sh -c "pnpm prisma:migrate:deploy && pnpm dev:prisma:seed && pnpm build && pnpm start"
