Use deployments for e2e testing

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,14 +1,16 @@
-name: Playwright
+name: Playwright E2E Tests
 
 on:
-  push:
-    branches:
-      - main
-      # TODO: remove
-      - fix-e2e-tests
+  workflow_run:
+    workflows:
+      - CI
+      - Deployment
+    types:
+      - completed
 
 permissions:
   contents: read
+  pull-requests: write
   actions: read
   checks: write
 
@@ -16,99 +18,157 @@ jobs:
   run-e2es:
     name: Run E2E Tests
     runs-on: ubuntu-latest
-    timeout-minutes: 20
     steps:
-      - uses: actions/checkout@v4
+      - name: Check if CI and Deployment workflows have succeeded
+        id: check-workflows
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { github, context } = require('@actions/github');
+            const { setFailed, setOutput } = require('@actions/core');
+
+            try {
+              const sha = context.payload.workflow_run.head_sha;
+              const owner = context.repo.owner;
+              const repo = context.repo.repo;
+
+              // Fetch the CI workflow runs for this commit
+              const ciWorkflows = await github.rest.actions.listWorkflowRunsForRepo({
+                owner,
+                repo,
+                workflow_id: 'CI',
+                head_sha: sha
+              });
+
+              const ciWorkflowRun = ciWorkflows.data.workflow_runs.find(run => run.head_sha === sha);
+
+              if (!ciWorkflowRun || ciWorkflowRun.conclusion !== 'success') {
+                throw new Error('CI workflow has not succeeded.');
+              }
+
+              // Fetch the Deployment workflow runs for this commit
+              const deploymentWorkflows = await github.rest.actions.listWorkflowRunsForRepo({
+                owner,
+                repo,
+                workflow_id: 'Deployment',
+                head_sha: sha
+              });
+
+              const deploymentWorkflowRun = deploymentWorkflows.data.workflow_runs.find(run => run.head_sha === sha);
+
+              if (!deploymentWorkflowRun || deploymentWorkflowRun.conclusion !== 'success') {
+                throw new Error('Deployment workflow has not succeeded.');
+              }
+
+              core.setOutput('ci_status', ciWorkflowRun.conclusion);
+              core.setOutput('deployment_status', deploymentWorkflowRun.conclusion);
+            } catch (error) {
+              setFailed(error.message);
+            }
+
+      - name: Checkout repository
+        if: steps.check-workflows.outcome == 'success'
+        uses: actions/checkout@v4
 
       - name: Setup
+        if: steps.check-workflows.outcome == 'success'
         uses: ./.github/actions/setup
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Restore Docker Cache
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ hashFiles('**/docker-compose.prod.yml', '**/Dockerfile') }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
-
-      - name: Create .env.local
-        run: 'touch .env.local'
-
-      - name: Build Docker Images with Buildx Bake
-        run: |
-          mkdir -p /tmp/.buildx-cache-new
-          docker buildx bake --file docker-compose.prod.yml \
-            --progress plain \
-            --set *.cache-from=type=local,src=/tmp/.buildx-cache \
-            --set *.cache-to=type=local,dest=/tmp/.buildx-cache-new
-
-      - name: Update Docker Cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
-
-      - name: Start Docker Compose
-        run: docker compose -f docker-compose.prod.yml up -d
-
-      - name: Wait for Service
-        run: |
-          echo "Waiting for service to be ready..."
-          curl -v http://localhost:3000/api/health
-          # Wait for the application to be ready
-          timeout 120s bash -c 'until curl -s http://localhost:3030/api/health; do sleep 2; done'
-
-      - name: Print Docker Logs
-        if: failure()
-        run: docker compose -f docker-compose.prod.yml logs
-
       - name: Install Playwright Browsers
+        if: steps.check-workflows.outcome == 'success'
         run: pnpm exec playwright install --with-deps
 
-      - name: Run tests
+      - name: Get Deployment URL
+        if: steps.check-workflows.outcome == 'success'
+        id: get-deployment-url
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const { context, github } = require('@actions/github');
+            const { setFailed, setOutput } = require('@actions/core');
+
+            try {
+              const sha = context.payload.workflow_run.head_sha;
+              const owner = context.repo.owner;
+              const repo = context.repo.repo;
+
+              // Get the deployments for the commit SHA
+              const { data: deployments } = await github.rest.repos.listDeployments({
+                owner,
+                repo,
+                sha: sha,
+              });
+
+              if (deployments.length === 0) {
+                throw new Error('No deployments found for the current SHA.');
+              }
+
+              const deploymentId = deployments[0].id;
+
+              // Get the deployment statuses
+              const { data: statuses } = await github.rest.repos.listDeploymentStatuses({
+                owner,
+                repo,
+                deployment_id: deploymentId,
+              });
+
+              if (statuses.length === 0) {
+                throw new Error('No deployment statuses found for the deployment.');
+              }
+
+              const environmentUrl = statuses[0].environment_url;
+
+              if (!environmentUrl) {
+                throw new Error('No environment URL found in the deployment status.');
+              }
+
+              setOutput('environment_url', environmentUrl);
+            } catch (error) {
+              setFailed(error.message);
+            }
+
+      - name: Run E2E Tests
+        if: steps.check-workflows.outcome == 'success'
         id: test-run
         run: pnpm run e2e:ci
         env:
-          BASE_URL: http://localhost:3030
+          BASE_URL: ${{ steps.get-deployment-url.outputs.environment_url }}
 
-      # - name: Upload Playwright Test Report
-      #   id: upload-results
-      #   uses: shallwefootball/s3-upload-action@v1.3.3
-      #   if: always() && hashFiles('.next/__e2e__reports__') != ''
-      #   with:
-      #     aws_key_id: ${{ secrets.AWS_KEY_ID }}
-      #     aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      #     aws_bucket: apadana-e2e
-      #     source_dir: .next/__e2e__reports__
-      #     destination_dir: ${{ github.event.pull_request.head.sha || github.sha }}
+      - name: Upload Playwright Test Report
+        if: always()
+        id: upload-results
+        uses: shallwefootball/s3-upload-action@master
+        with:
+          aws_key_id: ${{ secrets.AWS_KEY_ID }}
+          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws_bucket: apadana-e2e
+          source_dir: .next/__e2e__reports__
+          destination_dir: ${{ github.event.workflow_run.head_sha || github.sha }}
 
-      # - name: Write Comment
-      #   if: always()
-      #   uses: actions/github-script@v7
-      #   with:
-      #     script: |
-      #       const sha = context.payload.pull_request?.head.sha || context.sha;
-      #       const testRunOutcome = '${{ steps.test-run.outcome }}';
-      #       const conclusion = testRunOutcome === 'success' ? 'success' : 'failure';
-      #       const reportUrl = `https://apadana-e2e.s3.amazonaws.com/${sha}/index.html`;
+      - name: Write GitHub Check
+        if: always()
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const sha = context.payload.workflow_run.head_sha;
+            const testRunOutcome = '${{ steps.test-run.outcome }}';
+            const conclusion = testRunOutcome === 'success' ? 'success' : 'failure';
+            const reportUrl = `https://apadana-e2e.s3.amazonaws.com/${sha}/index.html`;
 
-      #       await github.rest.checks.create({
-      #         owner: context.repo.owner,
-      #         repo: context.repo.repo,
-      #         name: 'Playwright Report',
-      #         head_sha: sha,
-      #         status: 'completed',
-      #         conclusion: conclusion,
-      #         details_url: reportUrl,
-      #         output: {
-      #           title: 'Playwright Test Report',
-      #           summary: `[**View the Playwright test report**](${reportUrl})`,
-      #           text: `# The Playwright E2E tests have ${conclusion === 'success' ? 'passed' : 'failed'}.` +
-      #             `\n\nClick [here](${reportUrl}) to view the detailed report.`
-      #         }
-      #       });
+            await github.rest.checks.create({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              name: 'Playwright E2E Tests',
+              head_sha: sha,
+              status: 'completed',
+              conclusion: conclusion,
+              details_url: reportUrl,
+              output: {
+                title: 'Playwright E2E Test Report',
+                summary: `[**View the Playwright E2E test report**](${reportUrl})`,
+                text: `# The Playwright E2E tests have ${conclusion === 'success' ? 'passed' : 'failed'}.\n\nClick [here](${reportUrl}) to view the detailed report.`
+              }
+            });
 
       - name: Stop Docker Compose
         if: always()
