only check in deployment status

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -1,12 +1,7 @@
 name: Playwright E2E Tests
 
 on:
-  workflow_run:
-    workflows:
-      - CI
-      - Deployment
-    types:
-      - completed
+  deployment_status:
 
 permissions:
   contents: read
