--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
+
             try {
               const sha = context.payload.workflow_run.head_sha;
               const owner = context.repo.owner;
@@ -55,7 +56,7 @@ jobs:
               core.setOutput('ci_status', ciWorkflowRun.conclusion);
               core.setOutput('deployment_status', deploymentWorkflowRun.conclusion);
             } catch (error) {
-              setFailed(error.message);
+              core.setFailed(error.message);
             }
 
       - name: Checkout repository
@@ -76,51 +77,26 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const { context, github } = require('@actions/github');
-            const { setFailed, setOutput } = require('@actions/core');
-
             try {
-              const sha = context.payload.workflow_run.head_sha;
+              // Use deployment_status context instead of workflow_run
+              const sha = context.payload.deployment.sha;
               const owner = context.repo.owner;
               const repo = context.repo.repo;
 
-              // Get the deployments for the commit SHA
-              const { data: deployments } = await github.rest.repos.listDeployments({
-                owner,
-                repo,
-                sha: sha,
-              });
-
-              if (deployments.length === 0) {
-                throw new Error('No deployments found for the current SHA.');
-              }
-
-              const deploymentId = deployments[0].id;
-
-              // Get the deployment statuses
-              const { data: statuses } = await github.rest.repos.listDeploymentStatuses({
-                owner,
-                repo,
-                deployment_id: deploymentId,
-              });
-
-              if (statuses.length === 0) {
-                throw new Error('No deployment statuses found for the deployment.');
-              }
-
-              const environmentUrl = statuses[0].environment_url;
+              // Get the environment URL directly from the deployment status
+              const environmentUrl = context.payload.deployment_status.environment_url;
 
               if (!environmentUrl) {
                 throw new Error('No environment URL found in the deployment status.');
               }
 
-              setOutput('environment_url', environmentUrl);
+              core.setOutput('environment_url', environmentUrl);
             } catch (error) {
-              setFailed(error.message);
+              core.setFailed(error.message);
             }
 
       - name: Run E2E Tests
-        if: steps.check-workflows.outcome == 'success'
+        if: steps.check-workflows.outcome == 'success' && steps.get-deployment-url.outputs.environment_url != ''
         id: test-run
         run: pnpm run e2e:ci
         continue-on-error: true
