--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -19,8 +19,7 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const util = require('utils');
-            console.log(util.inspect(context.payload, false, null, true /* enable colors */));
+            console.log('payload', context.payload);
 
             try {
               const sha = context.payload.deployment.sha;
