--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,12 @@ jobs:
       - name: Setup
         uses: ./.github/actions/setup
 
+      - name: Cache Next.js build output
+        uses: actions/cache@v3
+        with:
+          path: .next/cache
+          key: ${{ runner.os }}-next-${{ hashFiles('next.config.js', 'package.json', 'pnpm-lock.yaml') }}
+
       - name: Build
         run: pnpm run build
         env:
