--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -14,52 +14,53 @@ jobs:
     name: Run E2E Tests
     runs-on: ubuntu-latest
     steps:
-      - name: Check if CI and Deployment workflows have succeeded
+      - name: Check if Deployment is successful
+        id: check-deployment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const deploymentStatus = await github.rest.repos.getDeploymentStatus({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              deployment_id: payload.deployment.id,
+              status_id: payload.deployment_status.id
+            });
+
+            core.setOutput('deployment_status', deploymentStatus.data.state);
+            core.setOutput('deployment_url', deploymentStatus.data.target_url);
+
+            if (deploymentStatus.data.state !== 'success') {
+              throw new Error(`Deployment not successful. state: ${deploymentStatus.data.state}`);
+            }
+
+      - name: Check if CI workflow have succeeded
         id: check-workflows
         uses: actions/github-script@v7
         with:
           script: |
-            const sha = context.payload.deployment.sha;
-            const owner = context.repo.owner;
-            const repo = context.repo.repo;
-
-            // Check CI workflow
-            const ciWorkflows = await github.rest.actions.listWorkflowRunsForWorkflow({
+            const workflowRuns = await github.rest.actions.getWorkflowRun({
               owner,
               repo,
-              workflow_id: 'ci.yml', 
               head_sha: sha
             });
-            const ciWorkflowRun = ciWorkflows.data.workflow_runs.find(run => run.conclusion === 'success');
-            if (!ciWorkflowRun) throw new Error('CI workflow not successful for this SHA.');
-
-            // Check Deployment workflow
-            const deploymentWorkflows = await github.rest.actions.listWorkflowRunsForWorkflow({
-              owner,
-              repo,
-              workflow_id: 'deployment.yml', 
-              head_sha: sha
-            });
-            const deploymentWorkflowRun = deploymentWorkflows.data.workflow_runs.find(run => run.conclusion === 'success');
-            if (!deploymentWorkflowRun) throw new Error('Deployment workflow not successful for this SHA.');
-
-            core.setOutput('ci_status', ciWorkflowRun.conclusion);
-            core.setOutput('deployment_status', deploymentWorkflowRun.conclusion);
+            const ciRun = workflowRuns.data.workflow_runs.find(run => run.path === '.github/workflows/ci.yml');
+            core.setOutput('ci_status', ciRun.conclusion);
+            if (ciRun.conclusion !== 'success') throw new Error('CI workflow not successful for this SHA.');
 
       - name: Checkout repository
-        if: steps.check-workflows.outcome == 'success'
+
         uses: actions/checkout@v4
 
       - name: Setup
-        if: steps.check-workflows.outcome == 'success'
+
         uses: ./.github/actions/setup
 
       - name: Install Playwright Browsers
-        if: steps.check-workflows.outcome == 'success'
+
         run: pnpm exec playwright install --with-deps
 
       - name: Get Deployment URL
-        if: steps.check-workflows.outcome == 'success'
+
         id: get-deployment-url
         uses: actions/github-script@v7
         with:
@@ -74,7 +75,6 @@ jobs:
             }
 
       - name: Run E2E Tests
-        if: steps.check-workflows.outcome == 'success' && steps.get-deployment-url.outputs.environment_url != ''
         id: test-run
         run: pnpm run e2e:ci
         continue-on-error: true
@@ -82,7 +82,6 @@ jobs:
           BASE_URL: ${{ steps.get-deployment-url.outputs.environment_url }}
 
       - name: Upload Playwright Test Report
-        if: steps.check-workflows.outcome == 'success'
         id: upload-results
         uses: shallwefootball/s3-upload-action@master
         with:
@@ -92,7 +91,6 @@ jobs:
           source_dir: .next/__e2e__reports__
           destination_dir: ${{ github.event.workflow_run.head_sha || github.sha }}
       - name: Write GitHub Check
-        if: steps.check-workflows.outcome == 'success'
         uses: actions/github-script@v7
         with:
           script: |
