--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -22,8 +22,8 @@ jobs:
             const deploymentStatus = await github.rest.repos.getDeploymentStatus({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              deployment_id: payload.deployment.id,
-              status_id: payload.deployment_status.id
+              deployment_id: context.payload.deployment.id,
+              status_id: context.payload.deployment_status.id
             });
 
             core.setOutput('deployment_status', deploymentStatus.data.state);
@@ -59,27 +59,12 @@ jobs:
 
         run: pnpm exec playwright install --with-deps
 
-      - name: Get Deployment URL
-
-        id: get-deployment-url
-        uses: actions/github-script@v7
-        with:
-          script: |
-            try {
-              const sha = context.payload.deployment.sha;
-              const environmentUrl = context.payload.deployment_status.environment_url || context.payload.deployment_status.target_url;
-              if (!environmentUrl) throw new Error('No environment URL found.');
-              core.setOutput('environment_url', environmentUrl);
-            } catch (error) {
-              core.setFailed(error.message);
-            }
-
       - name: Run E2E Tests
         id: test-run
         run: pnpm run e2e:ci
         continue-on-error: true
         env:
-          BASE_URL: ${{ steps.get-deployment-url.outputs.environment_url }}
+          BASE_URL: ${{ steps.check-deployment.outputs.deployment_url }}
 
       - name: Upload Playwright Test Report
         id: upload-results
