--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@faker-js/faker": "^9.3.0",
     "@hookform/resolvers": "^3.9.0",
     "@internationalized/date": "^3.5.5",
+    "@octokit/rest": "^21.0.2",
     "@prisma/client": "^5.22.0",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
