--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -41,9 +41,9 @@ jobs:
         with:
           script: |
             const workflowRuns = await github.rest.actions.getWorkflowRun({
-              owner,
-              repo,
-              head_sha: sha
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              head_sha: context.payload.deployment.sha
             });
             const ciRun = workflowRuns.data.workflow_runs.find(run => run.path === '.github/workflows/ci.yml');
             core.setOutput('ci_status', ciRun.conclusion);
