--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -43,7 +43,7 @@ jobs:
             const workflowRuns = await github.rest.actions.getWorkflowRun({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              head_sha: context.payload.deployment.sha
+              head_sha: context.sha,
             });
             const ciRun = workflowRuns.data.workflow_runs.find(run => run.path === '.github/workflows/ci.yml');
             core.setOutput('ci_status', ciRun.conclusion);
