--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -40,25 +40,30 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            const workflowRuns = await github.rest.actions.getWorkflowRun({
-              owner: context.repo.owner,
+            try {
+              const workflowRuns = await github.rest.actions.getWorkflowRun({
+                owner: context.repo.owner,
               repo: context.repo.repo,
               head_sha: context.sha,
             });
             const ciRun = workflowRuns.data.workflow_runs.find(run => run.path === '.github/workflows/ci.yml');
-            core.setOutput('ci_status', ciRun.conclusion);
-            if (ciRun.conclusion !== 'success') throw new Error('CI workflow not successful for this SHA.');
+              core.setOutput('ci_status', ciRun.conclusion);
+              if (ciRun.conclusion !== 'success') throw new Error('CI workflow not successful for this SHA.');
+            } catch (error) {
+              if (error.status === 404) {
+                core.setOutput('ci_status', 'not_found');
+              } else {
+                throw error;
+              }
+            }
 
       - name: Checkout repository
-
         uses: actions/checkout@v4
 
       - name: Setup
-
         uses: ./.github/actions/setup
 
       - name: Install Playwright Browsers
-
         run: pnpm exec playwright install --with-deps
 
       - name: Run E2E Tests
